# shortlink

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/accounts/: forms.py  views.py
apps/analytics/: models.py  services.py
apps/analytics/migrations/: 0001_initial.py
apps/core/: urls.py  views.py
apps/shortener/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/shortener/migrations/: 0001_initial.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
docs/: interview-qa.md  learning-log.md
docs/adr/: 0001-short-code-generation.md  0002-redirect-302-not-301.md  0003-client-ip-parsing.md  0004-social-login-credentials.md  0005-cloud-run-deployment.md  0006-livez-not-healthz.md  0007-prod-logging-config.md  0008-style-allauth-pages.md  0009-email-first-auth.md  0010-redis-cache-aside.md  0011-editable-destination-url.md
templates/: base.html
templates/account/: entrance.html  login.html  social_only.html
templates/allauth/elements/: alert.html  button.html  button_group.html  field.html  fields.html  form.html  h1.html  h2.html  hr.html  p.html  provider.html  provider_list.html
templates/allauth/layouts/: base.html  entrance.html
templates/core/: home.html
templates/registration/: login.html
templates/shortener/: create.html  edit_link.html  my_links.html
